chore: data structure conforming
